#70 - various fixes: - action tags were too big - default chat was showing the same action as actionrollchat for mage's ballad - action tags were causing wrapping

--- a/src/styles/_mixins.sass
+++ b/src/styles/_mixins.sass
@@ -17,6 +17,11 @@
     line-height: 1rem
     display: inline-flex
     font-size: smaller
+  &.smaller
+    padding: 0px 2px
+    line-height: 0.9rem
+    display: inline-flex
+    font-size: 0.6rem
 
 =inset($padding: 0.5rem 0.5rem 0 0.5rem, $shadow: 0 -3px 20px rgba(165, 131, 99, 1) inset, $margin: 0 0 0 0)
   padding: $padding
